@@ -1,3 +1,8 @@
+2007-09-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucs.cpp (slotCMenuRename): Fixed behaviour of rename context
+	menu callback.
+
 2007-08-20  Stefan Jahn  <stefan@lkcc.org>
 
 	* diagrams/diagram.cpp (getAxisLimits): Fixed segfault bug in
